# agent

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  api_client.py  auth.py  backup_service.py  database.py  docker-compose.yml  life-router.js  load_to_vector_db.py  main.py  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  scheduler.py  schema.json  task_handlers.py  varitype-kb-v2.json  webhook_handler.py
agents/: __init__.py  life_router.py  orchestrator.py
app/: __init__.py  __main__.py
caddy/: Caddyfile
data/: varitype-kb.json
docs/: architecture.md  index.md  quickstart.md
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
plugins/: email_client.py  example_motivation.py  google_calendar.py  home_assistant.py  notion.py  spotify.py  telegram_bot.py
scripts/: setup_jarvis_voice.py
sdk/: README.md  pyproject.toml
sdk/freddy/: __init__.py  client.py
sdk/integration/frederick/: README.md  freddy_service.py
services/: web_search.py
tests/: test_api.py  test_auth.py  test_db.py  test_emotion.py  test_endpoint_and_extractor.py  test_llm_and_tools.py  test_memory.py  test_memory_chat.py  test_orchestrator.py  test_plugins.py  test_profile.py  test_round1_coach.py  test_round2_feedback.py  test_round3_episodic.py  test_schema_patches.py  test_services.py  test_smoke.py  test_sprint1.py  test_sprint11_dialogue.py  test_sprint2.py  test_sprint4.py  test_sprint5.py  test_sprint6_triggers.py  test_sprint7_knowledge.py  (+2 more)
(+137 files in other folders)
