[project]
name = "freddy-agent"
version = "5.1.0-dev"
description = "Фреди — всемогущий AI-помощник"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "backups", "logs", "static"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E", "F", "W", "B", "UP", "SIM"]  # legacy monolith, refactor in progress

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
