[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freddy-sdk"
version = "1.0.0"
description = "Freddy AI Assistant SDK — умная говорилка как API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Freddy Team"}]

dependencies = [
    "aiohttp>=3.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["freddy*"]
